# trackr-back

./: db.sqlite3  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_remove_item_category_remove_item_owner_hobbytype_and_more.py  0003_alter_entry_title.py
trackr/: auth.py  settings.py  urls.py
